--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="./images/icon.png">
+    <link rel="icon" type="image/x-icon" href="./images/icon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1Q Enea Project</title>
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="div-embedded-game">
-        <iframe id="embedded-game" frameborder="0" src="https://itch.io/embed-upload/7858753?color=333333" allowfullscreen="" width="640" height="380"><a href="https://farfa7886.itch.io/progetto-enea">Play Progetto Enea on itch.io</a></iframe>
+        <iframe id="embedded-game" frameborder="0" src="https://itch.io/embed-upload/7971076?color=333333" allowfullscreen="" width="640" height="380"><a href="https://farfa7886.itch.io/progetto-enea"></a></iframe>
     </div>
     <button id="launchStartModal"  style="visibility: hidden;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"></button>
       
