--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <p style="color:#32BAFF"><br>Blu: <br></p><p style="margin-top: 20px; margin-right: 50px;">salta</p>
                 <p style="color:#FFCC14"><br>Giallo: <br></p><p style="margin-top: 20px;">accelera</p>
             </div>
+            <div style="display: flex; justify-content: center;" id="2-warning">
+                <p style="margin-top: 20px;">⚠️ Gioco ancora in fase di sviluppo</p>
+            </div>
             </pre>
             </div>
             <div class="modal-footer">
