--- a/index.html
+++ b/index.html
@@ -23,19 +23,16 @@
               </button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <pre>
                 <img src="./images/controls-it.png">
-              </pre>
-              <pre>
-              <div style="display: flex; justify-content: center;" id="1-tuto">
-                <p style="color:red"><br>Rosso: <br></p><p style="margin-top: 20px; margin-right: 50px;">movimento</p>
-                <p style="color:#32BAFF"><br>Blu: <br></p><p style="margin-top: 20px; margin-right: 50px;">salta</p>
-                <p style="color:#FFCC14"><br>Giallo: <br></p><p style="margin-top: 20px;">accelera</p>
+              <div style="display: flex; justify-content: center; margin-top: 20px" id="1-tuto">
+                <p style="margin-right: 50px;"><strong style="color:red">Rosso: </strong>movimento</p>
+                <p style="margin-right: 50px;"><strong style="color:#32BAFF">Blu: </strong> salta</p>
+                <p style="margin-right: 50px;"><strong style="color:#FFCC14">Giallo: </strong>accelera</p>
+                <p style="margin-right: 50px;"><strong style="color:#FF3DCB">Fucsia (ESC): </strong>esci</p>
             </div>
             <div style="display: flex; justify-content: center;" id="2-warning">
                 <p style="margin-top: 20px;">⚠️ Gioco ancora in fase di sviluppo</p>
             </div>
-            </pre>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success" style="width: 20%; height: 30%;">Change language to English</button>
