--- a/en.html
+++ b/en.html
@@ -28,10 +28,10 @@
             <div class="modal-body" style="text-align: center;">
                 <img src="./images/controls-it.png">
               <div style="display: flex; justify-content: center; margin-top: 20px" id="1-tuto">
-                <p style="margin-right: 50px;"><strong style="color:red">Rosso: </strong>movement</p>
-                <p style="margin-right: 50px;"><strong style="color:#32BAFF">Blu: </strong> jump</p>
-                <p style="margin-right: 50px;"><strong style="color:#FFCC14">Giallo: </strong>accelerate</p>
-                <p style="margin-right: 50px;"><strong style="color:#FF3DCB">Fucsia (ESC): </strong>exit</p>
+                <p style="margin-right: 50px;"><strong style="color:red">Red: </strong>movement</p>
+                <p style="margin-right: 50px;"><strong style="color:#32BAFF">Blue: </strong> jump</p>
+                <p style="margin-right: 50px;"><strong style="color:#FFCC14">Yellow: </strong>accelerate</p>
+                <p style="margin-right: 50px;"><strong style="color:#FF3DCB">Fuchisa (ESC): </strong>exit</p>
             </div>
             <div style="display: flex; justify-content: center;" id="2-warning">
                 <p style="margin-top: 20px;">⚠️ Game is in development stage</p>
