--- a/en.html
+++ b/en.html
@@ -12,8 +12,8 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
-    <div id="div-embedded-game">
-        <iframe id="embedded-game" frameborder="0" src="https://itch.io/embed-upload/7971076?color=333333" allowfullscreen="true" width="640" height="380"><a href="https://farfa7886.itch.io/progetto-enea"></a></iframe>
+    <div id="div-embedded-game" style="height: 100vh; width: 100vh;">
+        <iframe id="embedded-game" style="width: 100%; height: 100%;" src="./game/game.html"></iframe>
     </div>
     <button id="launchStartModal"  style="visibility: hidden;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"></button>
       
